--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
         <i class="ion-ios-download-outline"></i>Hold
       </button>
 
+      <input type="text" placeholder="Enter Score" class="score-to-win" />
+
       <img src="dice-5.png" alt="Dice" class="dice" />
     </div>
 
