--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 
       <input type="text" placeholder="Enter Score" class="score-to-win" />
 
-      <img src="dice-5.png" alt="Dice" class="dice" />
+      <img src="dice-6.png" alt="Dice" class="dice" id="dice-1" />
+      <img src="dice-4.png" alt="Dice" class="dice" id="dice-2" />
     </div>
 
     <!-- <script src="app.js"></script> -->
